# Neural

./: .bumpversion.cfg  .env.example  .env.test  .gitignore  AGENTS.md  BETA_BUGS_TRACKING.md  BRANCH_ANALYSIS.md  BUG_FIXES_COMPLETED.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTED_SPORTS_FILTERING.md  DEVELOPMENT.md  DOCUMENTATION_AUTOMATION_PLAN.md  Dockerfile  HARDENING_PR_PLAN.md  INVESTOR_DEMO.md  LICENSE  LIVE_TESTING_FINDINGS.md  Makefile  PLATFORM_ROADMAP.md  README.md  RELEASE_NOTES_v1.4.0.md  ROADMAP.md  SDK_FIXES_REQUIRED.md  TEST_RESULTS.md  WEBSOCKET_INTEGRATION_GUIDE.md  WEBSOCKET_STATUS.md  agentuity.yaml  check_games.py  docker-compose.yml  execute_eagles_trade.py  greptile.json  investigate_markets.py  mypy.ini  nfl_markets_cache.json  portfolio_example.py  production_test.py  pyproject.toml  (+10 more)
.github/: SECRETS_SETUP.md  branch-protection.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-enhanced.yml  docs-monitoring.yml  docs.yml  nightly-kalshi-smoke.yml  pr-checks.yml  pr-docs.yml  publish.yml  release-dry-run.yml  release.yml  security.yml  team-integration.yml  terraform.yml
agent_consumers/: README.md  __init__.py  base_consumer.py
agent_consumers/DataCoordinator/: __init__.py  data_coordinator.py
agent_consumers/MarketEngineer/: __init__.py  market_engineer.py
agent_consumers/RiskManager/: __init__.py  risk_manager.py
agent_consumers/StrategyAnalyst/: __init__.py  strategy_analyst.py
agent_consumers/TradeExecutor/: __init__.py  trade_executor.py
agents/: README.md
agents/DataCoordinator/: agent.py
agents/MarketEngineer/: agent.py
agents/RiskManager/: agent.py
agents/StrategyAnalyst/: agent.py
agents/TradeExecutor/: agent.py
config/: .env.example  data_sources.yaml
config/environments/: development.yaml  production.yaml  sandbox.yaml  training.yaml
dashboard/: .gitignore  Dockerfile  README.md  app.py  database_integration.py  docker-compose.yml  init_db.sql  requirements.txt
dashboard/components/: __init__.py  control_panel.py  positions_table.py  profit_loss_chart.py  trades_table.py
dashboard/data/: __init__.py  database.py  models.py  redis_stream.py
dashboard/pages/: 1_📊_Trading.py  2_🤖_Agent_Monitor.py
dashboard/utils/: __init__.py  calculations.py  formatters.py
data_pipeline/: __init__.py  main.py  requirements.txt
data_pipeline/config/: settings.py
data_pipeline/orchestration/: redis_event_publisher.py  unified_stream_manager.py
data_pipeline/reliability/: backpressure_manager.py  flow_controller.py  (+1 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_SOURCES_GUIDE.md  GAME_CONFIGURATION_GUIDE.md  GETTING_STARTED.md  GITHUB_PUSH_GUIDE.md  GIT_WORKFLOW.md  INFRASTRUCTURE_GUIDE.md  KALSHI_NFL_FIX.md  MVP_PLAN.md  PLUGIN_ARCHITECTURE.md  README.md  README.mdx  SDK_DOCUMENTATION.md  SIMPLIFIED_ARCHITECTURE_SUMMARY.md  SYSTEM_OVERVIEW.md  TEAM_INSTALLATION.md  TRADING_LOGIC.md  WEBSOCKET_GUIDE.md  WEBSOCKET_STREAMING_GUIDE.md  analysis_stack_verification.md  api_reference.md  backtesting.md  data_sources.md  edge_and_confidence_calculations.md  getting-started.mdx  kalshi_docs.txt  kalshi_integration.md  linear-sprint-roadmap.md  live_trading_analysis.md  mint.json  product-ops.md  production_capabilities_analysis.md  strategies.md  trading_infrastructure_complete.md  unit_test_results.md
docs-mintlify/: README.md  introduction.mdx  mint.json  openapi.json  package-lock.json  package.json  quickstart.mdx
examples/: 01_data_collection.py  01_init_user.py  02_espn_toolkit.py  02_place_order.py  03_kalshi_markets.py  03_ws_market_updates.py  04_fix_order_entry.py  05_mean_reversion_strategy.py  06_strategy_comparison.py  07_live_trading_bot.py  08_docker_deployment.py  09_daily_nba_markets.py  10_daily_nba_markets_polymarket.py  11_complete_v030_demo.py  12_cross_provider_analysis_bridge.py  13_deterministic_cross_provider_replay.py  README_HISTORICAL_DATA.md  agent_redis_consumer.py  analysis_stack_showcase.py  arbitrage_scanner.py  backtest_strategy.py  backtesting_integration_demo.py  basic_usage.py  build_first_bot.py  cfb_sentiment_trading.py  collect_nfl_tweets.py  custom_data_adapter.py  edge_calculation_demo.py  espn_playbyplay.py  espn_sports_example.py  fetch_markets.py  kalshi_sports_markets.py  live_cfb_paper_trading_finale.py  market_correlation.py  monitor_game_tweets.py  nfl_websocket_streaming.py  odds_api_demo.py  portfolio_optimization_example.py  production_cfb_trading.py  production_demo_showcase.py  (+27 more)
neural/: __init__.py  __main__.py  _version.py  cli.py
neural.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
neural_sdk/: README.md  __init__.py  cli.py
roadmap/: analysis-infra.md  data-collection-infra.md  trading-infra.md
scripts/: README.md  backfill_ravens_lions_history.py  cfb_backtest.py  cfb_hft_trader.py  check_docstring_coverage.py  check_documentation_links.py  cleanup_technical_debt.py  college_football_discovery.json  demo_investor.py  demo_sdk.py  discover_college_football.py  discover_todays_cfb_games.py  generate_api_docs.py  generate_examples_docs.py  generate_mintlify_docs.py  generate_openapi_specs.py  health_check.py  install_neural_sdk.sh  package_smoke.py  quick_weather_demo.py  run_agents.py  run_backtest.py  setup_dev_environment.sh  stream_chiefs_chargers_rest.py  stream_college_football_rest.py  test_cfb_dates.py  test_doc_examples.py  test_weather_adapter.py  update_changelog.py  validate_docs.py  validate_examples.py
secrets/: README.md
src/sdk/: README.md  (+1 more)
team-docker/: Dockerfile  docker-compose.yml
tests/: __init__.py  conftest.py  test_cli.py  test_optional_dependencies.py  test_public_api.py  test_redis_integration.py  test_redis_simple.py  test_risk_management.py  test_sample_package.py  test_v030_features.py  test_websocket_basic.py  test_websocket_infrastructure.py  test_websocket_simple.py  verify_implementation.py
tools/: README.md
trading_logic/: e2b_executor.py  e2b_kelly_functions.py  espn_tools.py  llm_client.py
utils/: kalshi_secrets.py
(+497 files in other folders)
